Add API key authentication filter and config
- Implemented ApiKeyAuthFilter using OncePerRequestFilter to validate requests via "X-API-KEY" header
- Added SecurityConfig to integrate the filter into the Spring Security chain
- All requests now require a valid API key to be authenticated
- Unauthorized requests return a consistent JSON error response (ApiResponse + ErrorResponse)
- Added AppProperties to load API key from application.yml / .env configuration
- Other:
  - Moved "getBooksInBookshelf" endpoint from "/books/bookshelf/{bookshelfId}" in BookController to "/bookshelves/{id}/books" in BookshelfController

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -8,3 +8,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.community.dialect.SQLiteDialect
+  config:
+    import: optional:file:.env[.properties]
+
+app:
+  api-key: ${API_KEY}
