--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "license-check": "license-checker-rseidelsohn --production --excludePackages \"bookshelf\" --onlyAllow \"MIT;ISC;BSD-2-Clause;BSD-3-Clause;Apache-2.0;0BSD;CC0-1.0;Hippocratic-2.1\" --summary",
+    "generate-license-report": "license-checker-rseidelsohn --production --json > license-report.json"
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -32,6 +34,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "license-checker-rseidelsohn": "^4.4.2",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.13",
     "typescript": "~5.8.3",
