--- a/.github/workflows/verify-frontend-pr.yml
+++ b/.github/workflows/verify-frontend-pr.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: license-report
-          path: license-report.json
+          path: frontend/license-report.json
 
   lint:
     name: Run ESLint
