Use Gradle assemble instead of build in backend workflow
- Updated verify-backend-pr.yml to run ./gradlew clean assemble instead of ./gradlew clean build.
- Keeps CI lighter by skipping test tasks during backend verification.
- Future backend test tasks will be handled in a dedicated job.

--- a/.github/workflows/verify-backend-pr.yml
+++ b/.github/workflows/verify-backend-pr.yml
@@ -32,8 +32,8 @@ jobs:
         working-directory: backend
         run: ./gradlew ktlintCheck
 
-  build:
-    name: Build Spring Boot Project
+  assemble:
+    name: Assemble Project
     needs: lint
     runs-on: ubuntu-latest
     timeout-minutes: 10
@@ -53,6 +53,6 @@ jobs:
         working-directory: backend
         run: chmod +x gradlew
 
-      - name: Build project
+      - name: Assemble project
         working-directory: backend
-        run: ./gradlew clean build
+        run: ./gradlew clean assemble
