--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -2,11 +2,16 @@ FROM eclipse-temurin:21-jdk-alpine
 
 WORKDIR /workspace/backend
 
-COPY . .
-
-RUN chmod +x ./gradlew
 RUN apk add --no-cache curl
 
-EXPOSE 8080
+COPY gradlew .
+COPY gradle/wrapper ./gradle/wrapper
+COPY build.gradle.kts settings.gradle.kts ./
 
-CMD ["./gradlew", "bootRun", "--no-daemon"]
+RUN chmod +x ./gradlew
+RUN ./gradlew dependencies --no-daemon
+
+COPY . .
+
+EXPOSE 8080
+CMD ["sh", "-c", "chmod +x ./gradlew && ./gradlew bootRun --no-daemon"]
