Improve Docker dev environment and README instructions
- Updated backend Dockerfile to prebuild dependencies and enable continuous Gradle classes build.
- Exposed LiveReload port (35729) and added SPRING_DEVTOOLS_* environment vars to docker-compose.
- Revised README for clarity: added concise frontend hot reload section, cleaned up backend hot reload instructions, and improved cross‑platform (Windows/WSL2) guidance.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,6 +6,7 @@ services:
     container_name: bookshelf-backend
     ports:
       - "8080:8080"
+      - "35729:35729"
     volumes:
       - ./backend:/workspace/backend
       - ./backend/bookshelf.db:/workspace/backend/bookshelf.db
@@ -15,8 +16,11 @@ services:
     environment:
       SPRING_PROFILES_ACTIVE: dev
       SPRING_DEVTOOLS_RESTART_ENABLED: "true"
+      SPRING_DEVTOOLS_LIVERELOAD_ENABLED: "true"
+      SPRING_DEVTOOLS_RESTART_ADDITIONAL_PATHS: /workspace/backend/build/classes,/workspace/backend/src/main/kotlin
     tty: true
     stdin_open: true
+    restart: unless-stopped
     healthcheck:
       test:
         - CMD-SHELL
