--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -9,9 +9,9 @@ COPY gradle/wrapper ./gradle/wrapper
 COPY build.gradle.kts settings.gradle.kts ./
 
 RUN chmod +x ./gradlew
-RUN ./gradlew dependencies --no-daemon
+RUN ./gradlew clean build -x test --no-daemon || echo "Skipping failed build (intended for dependency caching)"
 
 COPY . .
 
 EXPOSE 8080
-CMD ["sh", "-c", "chmod +x ./gradlew && ./gradlew bootRun --no-daemon"]
+CMD ["sh", "-c", "chmod +x ./gradlew && ./gradlew classes --continuous --no-daemon & ./gradlew bootRun --no-daemon"]
