Refactor frontend and backend workflows to reduce redundant installs
- Combined steps within each workflow to avoid repeated setup and dependency installs.
- Reduced multiple Node.js and Java installations in frontend and backend verification.
- Preserved path-based triggers for efficient PR checks.
- Simplified workflow structure for faster and cleaner CI runs.

--- a/.github/workflows/verify-backend-pr.yml
+++ b/.github/workflows/verify-backend-pr.yml
@@ -24,16 +24,19 @@ jobs:
             backend:
               - 'backend/**'
 
-  lint:
-    name: Run Ktlint
+  verify-backend:
+    name: Verify Backend Changes
     needs: detect-changes
     if: needs.detect-changes.outputs.backend_changed == 'true'
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 15
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
+
+      - name: Validate Gradle wrapper
+        uses: gradle/actions/wrapper-validation@v5
 
       - name: Setup JDK
         uses: actions/setup-java@v5
@@ -48,30 +51,12 @@ jobs:
 
       - name: Run Ktlint check
         working-directory: backend
-        run: ./gradlew ktlintCheck
+        run: ./gradlew ktlintCheck --no-daemon
 
-  assemble:
-    name: Assemble Project
-    needs: [detect-changes, lint]
-    if: needs.detect-changes.outputs.backend_changed == 'true'
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v5
-
-      - name: Setup JDK
-        uses: actions/setup-java@v5
-        with:
-          distribution: "temurin"
-          java-version: "21"
-          cache: gradle
-
-      - name: Grant execute permissions for Gradle
+      - name: Run tests
         working-directory: backend
-        run: chmod +x gradlew
+        run: ./gradlew test --no-daemon
 
       - name: Assemble project
         working-directory: backend
-        run: ./gradlew clean assemble
+        run: ./gradlew clean assemble --no-daemon
