--- a/.github/workflows/verify-frontend-pr.yml
+++ b/.github/workflows/verify-frontend-pr.yml
@@ -24,12 +24,12 @@ jobs:
             frontend:
               - 'frontend/**'
 
-  license-check:
-    name: License Compliance Check
+  verify-frontend:
+    name: Verify Frontend Changes
     needs: detect-changes
     if: needs.detect-changes.outputs.frontend_changed == 'true'
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 15
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
@@ -54,58 +54,15 @@ jobs:
         run: npm run generate-license-report
 
       - name: Upload license report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: license-report
           path: frontend/license-report.json
 
-  lint:
-    name: Run ESLint
-    needs: [detect-changes, license-check]
-    if: needs.detect-changes.outputs.frontend_changed == 'true'
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v5
-
-      - name: Install Node
-        uses: actions/setup-node@v5
-        with:
-          node-version: "20.x"
-          cache: npm
-          cache-dependency-path: frontend/package-lock.json
-
-      - name: Install dependencies
-        working-directory: frontend
-        run: npm ci
-
       - name: Run ESLint
         working-directory: frontend
         run: npm run lint
-
-  build:
-    name: Build Project
-    needs: [detect-changes, lint]
-    if: needs.detect-changes.outputs.frontend_changed == 'true'
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v5
-
-      - name: Install Node
-        uses: actions/setup-node@v5
-        with:
-          node-version: "20.x"
-          cache: npm
-          cache-dependency-path: frontend/package-lock.json
-
-      - name: Install dependencies
-        working-directory: frontend
-        run: npm ci
 
       - name: Build project
         working-directory: frontend
