--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -25,9 +25,7 @@ services:
       test:
         - CMD-SHELL
         - >
-          curl -fs -o /dev/null -w "%{http_code}"
-          -H "X-API-KEY: ${API_KEY}"
-          http://127.0.0.1:8080/api/v1/health | grep -q 200
+          curl -fs -o /dev/null -w "%{http_code}" http://127.0.0.1:8080/api/v1/health | grep -q 200
       interval: 5s
       timeout: 3s
       retries: 60
