--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
     "generate-license-report": "license-checker-rseidelsohn --production --json > license-report.json"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.66.0",
     "react-router-dom": "^7.8.2",
-    "sonner": "^2.0.7"
+    "sonner": "^2.0.7",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
