--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,4 +5,9 @@
 API_KEY=
 # The allowed origin for CORS requests from the frontend dev server.
 # For development use http://localhost:5173
-FRONTEND_URL=
+FRONTEND_URL=http://localhost:5173
+# Public ID for a pre-seeded demo bookshelf. When set and seed-demo-shelf is true,
+# the backend will ensure a bookshelf with this ID exists on startup and will seed
+# a few demo books if it’s missing. This ID is safe to expose publicly (read-only).
+# Example format is a 21-char NanoID.
+DEMO_BOOKSHELF_PUBLIC_ID=ry1A1E6Yb5T_L90xBRtS1
