--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -14,3 +14,5 @@ spring:
 app:
   api-key: ${API_KEY}
   frontend-url: ${FRONTEND_URL}
+  demo-shelf-public-id: ${DEMO_BOOKSHELF_PUBLIC_ID}
+  seed-demo-shelf: true
