--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -5,7 +5,14 @@
 VITE_API_KEY=
 # The backend API base URL that the frontend requests will be sent to.
 # For development use http://localhost:8080
-VITE_SERVER_URL=
+VITE_SERVER_URL=http://localhost:8080
 # The common API route prefix used by all backend endpoints.
 # Default is /api/v1 if not changed in the backend application.
-VITE_API_PREFIX=
+VITE_API_PREFIX=/api/v1
+# Public ID of the demo bookshelf to preview and link from the homepage.
+# This should match DEMO_BOOKSHELF_PUBLIC_ID in the backend .env so that
+# the demo shelf exists. Safe to expose (read-only).
+VITE_DEMO_BOOKSHELF_PUBLIC_ID=ry1A1E6Yb5T_L90xBRtS1
+# The GitHub repository URL for the Bookshelf project.
+# Format: https://github.com/username/repository
+VITE_GITHUB_REPOSITORY_URL=
