--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,3 +11,10 @@ FRONTEND_URL=http://localhost:5173
 # a few demo books if it’s missing. This ID is safe to expose publicly (read-only).
 # Example format is a 21-char NanoID.
 DEMO_BOOKSHELF_PUBLIC_ID=ry1A1E6Yb5T_L90xBRtS1
+# PostgreSQL database connection URL.
+# For local development use jdbc:postgresql://localhost:5432/bookshelf
+DB_URL=jdbc:postgresql://localhost:5432/bookshelf
+# PostgreSQL database username.
+DB_USERNAME=
+# PostgreSQL database password.
+DB_PASSWORD=
