configure test database for PostgreSQL
Set up application-test.yml with a local PostgreSQL test database on port 5433. Add FlywayTestConfig to clean and remigrate the schema on each test run. Import FlywayTestConfig in integration tests and the application context test.

--- a/backend/src/main/resources/application-test.yml
+++ b/backend/src/main/resources/application-test.yml
@@ -1,13 +1,15 @@
 spring:
   datasource:
-    url: jdbc:sqlite:bookshelf-test.db
-    driver-class-name: org.sqlite.JDBC
+    url: jdbc:postgresql://localhost:5433/bookshelf_test
+    username: test
+    password: test
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create-drop
-    properties:
-      hibernate:
-        dialect: org.hibernate.community.dialect.SQLiteDialect
+      ddl-auto: none
+  flyway:
+    enabled: true
+    clean-disabled: false
   main:
     allow-bean-definition-overriding: true
 
