--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,48 +1,15 @@
 services:
-  backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile.dev
-    container_name: bookshelf-backend
+  db:
+    image: postgres:18
+    container_name: bookshelf-postgres
     ports:
-      - "8080:8080"
-      - "35729:35729"
-    volumes:
-      - ./backend:/workspace/backend
-      - ./backend/bookshelf.db:/workspace/backend/bookshelf.db
-      - ~/gradle:/root/.gradle
-    env_file:
-      - ./backend/.env
+      - "5432:5432"
     environment:
-      SPRING_PROFILES_ACTIVE: dev
-      SPRING_DEVTOOLS_RESTART_ENABLED: "true"
-      SPRING_DEVTOOLS_LIVERELOAD_ENABLED: "true"
-      SPRING_DEVTOOLS_RESTART_ADDITIONAL_PATHS: /workspace/backend/build/classes,/workspace/backend/src/main/kotlin
-    tty: true
-    stdin_open: true
-    restart: unless-stopped
-    healthcheck:
-      test:
-        - CMD-SHELL
-        - >
-          curl -fs -o /dev/null -w "%{http_code}" http://127.0.0.1:8080/api/v1/health | grep -q 200
-      interval: 5s
-      timeout: 3s
-      retries: 60
-      start_period: 30s
-
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile.dev
-    container_name: bookshelf-frontend
-    ports:
-      - "5173:5173"
+      POSTGRES_DB: bookshelf
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
     volumes:
-      - ./frontend:/workspace/frontend
-      - /workspace/frontend/node_modules
-    env_file:
-      - ./frontend/.env
-    depends_on:
-      backend:
-        condition: service_healthy
+      - bookshelf_pgdata:/var/lib/postgresql
+
+volumes:
+  bookshelf_pgdata:
