--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,21 @@ VITE_DEMO_BOOKSHELF_PUBLIC_ID=ry1A1E6Yb5T_L90xBRtS1
 # The GitHub repository URL for the Bookshelf project.
 # Format: https://github.com/username/repository
 VITE_GITHUB_REPOSITORY_URL=
+
+# Backend (Spring Boot + Kotlin) Environment
+# ------------------------------------------
+# API key that must match the one in the root .env (shared with the frontend).
+# The backend validates incoming requests containing this key in the X‑API‑KEY header.
+API_KEY=
+# The allowed origin for CORS requests from the frontend dev server.
+# For development use http://localhost:5173
+FRONTEND_URL=http://localhost:5173
+# Public ID for a pre-seeded demo bookshelf. When set and seed-demo-shelf is true,
+# the backend will ensure a bookshelf with this ID exists on startup and will seed
+# a few demo books if it’s missing. This ID is safe to expose publicly (read-only).
+# Example format is a 21-char NanoID.
+DEMO_BOOKSHELF_PUBLIC_ID=ry1A1E6Yb5T_L90xBRtS1
+# PostgreSQL database username.
+DB_USERNAME=
+# PostgreSQL database password.
+DB_PASSWORD=
