--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -10,7 +10,7 @@ spring:
   flyway:
     enabled: true
   config:
-    import: optional:file:.env[.properties]
+    import: optional:file:../.env[.properties]
 
 app:
   api-key: ${API_KEY}
