Add production Docker setup and update dev configuration
- Add docker-compose.yml for production environment with db, backend, and frontend services
- Add production application.yml for Spring Boot with PostgreSQL and Flyway config
- Update frontend Dockerfile to accept VITE_* build args for build-time env injection
- Update application-dev.yml to append :5173 to FRONTEND_URL for dev CORS
- Rename dev postgres container to bookshelf-postgres-dev

--- a/.env.example
+++ b/.env.example
@@ -23,8 +23,8 @@ VITE_GITHUB_REPOSITORY_URL=
 # The backend validates incoming requests containing this key in the X‑API‑KEY header.
 API_KEY=
 # The allowed origin for CORS requests from the frontend dev server.
-# For development use http://localhost:5173
-FRONTEND_URL=http://localhost:5173
+# For development use http://localhost
+FRONTEND_URL=http://localhost
 # Public ID for a pre-seeded demo bookshelf. When set and seed-demo-shelf is true,
 # the backend will ensure a bookshelf with this ID exists on startup and will seed
 # a few demo books if it’s missing. This ID is safe to expose publicly (read-only).
