--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,7 +1,7 @@
 services:
   db:
     image: postgres:18
-    container_name: bookshelf-postgres
+    container_name: bookshelf-postgres-dev
     ports:
       - "5432:5432"
     environment:
