Simplify and reorganize .env.example
- Move shared API_KEY fields next to each other to the top with unified comment
- Move DEMO_BOOKSHELF_PUBLIC_ID fields next to each other to the top with unified comment
- Remove duplicate and redundant comments throughout the file
- Update comment on VITE_SERVER_URL

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,24 @@
+# Set this once — must be the same value in both fields below.
+# Used by the backend to validate incoming requests (X-API-KEY header)
+# and by the frontend to attach to each request.
+API_KEY=
+VITE_API_KEY=
+# Public ID of the demo bookshelf shown on the homepage.
+# Must be the same value in both fields below.
+# The backend will pre-seed a bookshelf with this ID on startup if it doesn't exist.
+# Safe to expose publicly (read-only). Example format is a 21-char NanoID (e.g. `ry1A1E6Yb5T_L90xBRtS1`).
+DEMO_BOOKSHELF_PUBLIC_ID=ry1A1E6Yb5T_L90xBRtS1
+VITE_DEMO_BOOKSHELF_PUBLIC_ID=ry1A1E6Yb5T_L90xBRtS1
+
 # Frontend (Vite + React) Environment
 # -----------------------------------
-# API key that the frontend attaches in each request header.
-# Must match the backend's API_KEY for successful authentication.
-VITE_API_KEY=
 # The backend API base URL that the frontend requests will be sent to.
 # For development use http://localhost:8080
+# On production set to your server's public IP or domain (e.g. `http://your-server-ip:8080`)
 VITE_SERVER_URL=http://localhost:8080
 # The common API route prefix used by all backend endpoints.
 # Default is /api/v1 if not changed in the backend application.
 VITE_API_PREFIX=/api/v1
-# Public ID of the demo bookshelf to preview and link from the homepage.
-# This should match DEMO_BOOKSHELF_PUBLIC_ID in the backend .env so that
-# the demo shelf exists. Safe to expose (read-only).
-VITE_DEMO_BOOKSHELF_PUBLIC_ID=ry1A1E6Yb5T_L90xBRtS1
 # The GitHub repository URL for the Bookshelf project.
 # Format: https://github.com/username/repository
 VITE_GITHUB_REPOSITORY_URL=
@@ -20,16 +26,9 @@ VITE_GITHUB_REPOSITORY_URL=
 # Backend (Spring Boot + Kotlin) Environment
 # ------------------------------------------
 # API key that must match the one in the root .env (shared with the frontend).
-# The backend validates incoming requests containing this key in the X‑API‑KEY header.
-API_KEY=
 # The allowed origin for CORS requests from the frontend dev server.
 # For development use http://localhost
 FRONTEND_URL=http://localhost
-# Public ID for a pre-seeded demo bookshelf. When set and seed-demo-shelf is true,
-# the backend will ensure a bookshelf with this ID exists on startup and will seed
-# a few demo books if it’s missing. This ID is safe to expose publicly (read-only).
-# Example format is a 21-char NanoID.
-DEMO_BOOKSHELF_PUBLIC_ID=ry1A1E6Yb5T_L90xBRtS1
 # PostgreSQL database username.
 DB_USERNAME=
 # PostgreSQL database password.
