--- a/.github/workflows/post-merge.yml
+++ b/.github/workflows/post-merge.yml
@@ -7,7 +7,9 @@ on:
 
 jobs:
   create_tag:
+    name: Create Tag After Merge
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     permissions:
       contents: write
     steps:
